--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.12",
         "spatie/laravel-query-builder": "^5.1",
         "spatie/laravel-sluggable": "^3.4",
         "stripe/stripe-php": "^9.6"
