--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-query-builder": "^5.1",
         "spatie/laravel-sluggable": "^3.4",
         "stripe/stripe-php": "^9.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.11",
         "laravel/sail": "^1.0.1",
