--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-query-builder": "^5.1",
         "spatie/laravel-sluggable": "^3.4",
