--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,13 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^7.3||^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.4",
         "filament/filament": "^2.17",
