--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "devDependencies": {
         "@alpinejs/collapse": "^3.10.3",
         "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/forms": "^0.5.6",
+        "@tailwindcss/typography": "^0.5.10",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
+        "autoprefixer": "^10.4.16",
         "laravel-vite-plugin": "^0.2.1",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
+        "postcss": "^8.4.31",
         "sass": "^1.58.0",
-        "tailwindcss": "^3.1.0",
-        "vite": "^2.9.11"
+        "tailwindcss": "^3.3.3",
+        "vite": "^2.9.16"
     },
     "dependencies": {
         "@alpinejs/mask": "^3.11.1",
+        "axios": "^1.5.1",
+        "filepond": "^4.30.4",
+        "lodash": "^4.17.21",
         "sweetalert2": "^11.7.5"
     }
 }
