--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.29",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-query-builder": "^5.1",
         "spatie/laravel-sluggable": "^3.4",
